manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmasiavr-backend
  namespace: farmasia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmasiavr-backend
  template:
    metadata:
      labels:
        app: farmasiavr-backend
    spec:
      containers:
        - name: farmasiavr-backend
          image: juhosii/farmasiavr-backend:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: farmasiavr-backend
  namespace: farmasia
spec:
  selector:
    app: farmasiavr-backend
  ports:
    - port: 8080
      targetPort: 3001
  type: LoadBalancer
