manifests/openshift-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmasiavr-backend
  annotations:
    app.openshift.io/vcs-ref: v0.4.0
    app.openshift.io/vcs-uri: https://github.com/FarmasiaVR/farmasia-vr-certificate-backend
  labels:
    app.kubernetes.io/part-of: FarmasiaVR
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmasiavr-backend
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 100%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: farmasiavr-backend
        application: farmasiavr-backend
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
    spec:
      containers:
        - name: farmasiavr-backend
          image: image-registry.openshift-image-registry.svc:5000/ohtuprojekti-staging/farmasiavr-backend-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              protocol: TCP
          resources:
            limits:
              cpu: 700m
              memory: 400Mi
            requests:
              cpu: 300m
              memory: 100Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: farmasiavr-backend
  labels:
    application: farmasiavr-backend
spec:
  selector:
    app: farmasiavr-backend
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3001
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    app.kubernetes.io/part-of: FarmasiaVR
    application: farmasiavr-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        fsGroup: 1001330000
      containers:
        - name: redis
          image: redis:latest
          securityContext:
            runAsUser: 1001330000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 6379
              protocol: TCP
          command:
            - redis-server
          args:
            - --appendonly
            - "yes"
            - --dir
            - /data
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    application: farmasiavr-backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
  type: ClusterIP
  ipFamilies:
    - IPv4
