manifests/openshift-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/FarmasiaVR/farmasia-vr-certificate-backend
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"farmasiavr-backend:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"farmasiavr-backend  \")].image","paused":"false"}]'
  labels:
    app.kubernetes.io/part-of: FarmasiaVR
  name: farmasiavr-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmasiavr-backend
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 100%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: farmasiavr-backend
        application: farmasiavr-backend
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
    spec:
      containers:
        - name: farmasiavr-backend
          image: image-registry.openshift-image-registry.svc:5000/ohtuprojekti-staging/farmasiavr-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
              protocol: TCP
          resources:
            limits:
              cpu: 700m
              memory: 400Mi
            requests:
              cpu: 300m
              memory: 100Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: farmasiavr-backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
              path: /health
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: farmasiavr-backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
              path: /health
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: farmasiavr-backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
              path: /health
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: farmasiavr-backend
  labels:
    application: farmasiavr-backend
spec:
  selector:
    app: farmasiavr-backend
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3001
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app.kubernetes.io/part-of: FarmasiaVR
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"farmasiavr-backend"}]'
    deployment.kubernetes.io/revision: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        application: farmasiavr-backend
    spec:
      containers:
        - name: mongo
          image: bitnami/mongodb:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongodb-pvc
              mountPath: /data/db
      volumes:
        - name: mongodb-pvc
          persistentVolumeClaim:
            claimName: farmasiavr-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    application: farmasiavr-backend
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    app.kubernetes.io/part-of: FarmasiaVR
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        fsGroup: 1001490000
      containers:
        - name: redis
          image: redis:latest
          securityContext:
            runAsUser: 1001490000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 6379
              protocol: TCP
          command:
            - redis-server
          args:
            - --appendonly
            - "yes"
            - --dir
            - /data
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
  type: ClusterIP
  ipFamilies:
    - IPv4
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    type: external
  name: farmasiavr-backend
spec:
  host: farmasiavr-backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
  path: /
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: farmasiavr-backend
    weight: 100
  wildcardPolicy: None
