manifests/openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmasiavr-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmasiavr-backend
  template:
    metadata:
      labels:
        app: farmasiavr-backend
        application: farmasiavr-backend
    spec:
      containers:
        - name: farmasiavr-backend
          image: juhosii/farmasiavr-backend:1.23
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: farmasiavr-backend
  labels:
    application: farmasiavr-backend
spec:
  selector:
    app: farmasiavr-backend
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3001
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: farmasiavr-backend
  labels:
    type: external
spec:
  host: farmasiavr-backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi
  path: /
  to:
    kind: Service
    name: farmasiavr-backend
  port:
    targetPort: 8080
  tls:
    termination: edge  
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        application: farmasiavr-backend
    spec:
      containers:
        - name: mongo
          image: bitnami/mongodb:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    application: farmasiavr-backend
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        fsGroup: 1001490000
      containers:
      - name: redis
        image: redis:latest
        securityContext:
          runAsUser: 1001490000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 6379
        command: ["redis-server"]
        args: ["--appendonly", "yes", "--dir", "/data"]
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
